Added OTP Sent functionality

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,15 @@
 MONGO_URI="mongodb+srv://mk:0EH3ndNYFN3IiVJT@cluster0.uzsuqq8.mongodb.net/usermanagement"
 PORT=4000
+SMTP=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+
+SMTP_MAIL=58370e8ac7063b
+SMTP_PASSWORD=cfb89b89c9f54a
+
+
+
 USER=58370e8ac7063b
 PASSWORD=cfb89b89c9f54a
 MAIL_API=re_123456789
+
+
