--- a/server/.env
+++ b/server/.env
@@ -5,11 +5,10 @@ SMTP_PORT=2525
 
 SMTP_MAIL=58370e8ac7063b
 SMTP_PASSWORD=cfb89b89c9f54a
-JWT_SECRET =manthan
+JWT_SECRET=g3e2WD4t8P5R6Y9pQsT3vW2zZ5y7B9Eh
 
 
-# USER=58370e8ac7063b
-# PASSWORD=cfb89b89c9f54a
-# MAIL_API=re_123456789
+
+
 
 
